force-app/main/default/objects/Record_Health_Check_Set__mdt/Record_Health_Check_Set__mdt.object-meta.xml
<CustomObject>
    <description
  >Parent configuration record for one Record Health Check component instance. One component instance references one Check Set by DeveloperName.</description>
    <label>Record Health Check Set</label>
    <pluralLabel>Record Health Check Sets</pluralLabel>
</CustomObject>