force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/CardRunMode__c.field-meta.xml
<CustomField>
    <fullName>CardRunMode__c</fullName>
    <label>When Checks Run</label>
    <description
  >Decides whether checks run on their own when the page opens, or only after the user clicks Run. "When the page opens" runs them automatically on load. "When the user clicks Run" shows a Run button and runs nothing until it is clicked - choose this for checks that are slow or should run on demand. Defaults to "When the user clicks Run".</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>RUN_ON_LOAD</fullName><default
        >false</default></value><value><fullName
        >RUN_ON_REQUEST</fullName><default
        >true</default></value></valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >"When the page opens" = checks run automatically on load. "When the user clicks Run" (default) = a Run button appears; nothing runs until clicked. Use the latter for heavy checks.</inlineHelpText>
</CustomField>