force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/CardTitle__c.field-meta.xml
<CustomField>
    <fullName>CardTitle__c</fullName>
    <label>Card Title</label>
    <description
  >The title shown at the top of the health check card on the record page. Required. Example: "Account Data Quality".</description>
    <type>Text</type>
    <length>255</length>
        <inlineHelpText
  >Required. The big title at the top of the card, e.g. "Account Data Quality".</inlineHelpText>
    <required>true</required>
</CustomField>