force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/DebugMode__c.field-meta.xml
<CustomField>
    <fullName>DebugMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >When ON, shows extra troubleshooting detail on the health check card and in the browser console — but only for users with the Record Health Check View Details custom permission (assign the Record Health Check Admin permission set). Everyone else sees the normal panel. Turn OFF when troubleshooting is finished.</description>
    <label>Show Troubleshooting Details</label>
    <inlineHelpText
  >Troubleshooting only. Also assign Record Health Check Admin to the user — Show Troubleshooting Details alone does not show extra detail.</inlineHelpText>
    <type>Checkbox</type>
</CustomField>