force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/FoundExpectedDisplay__c.field-meta.xml
<CustomField>
    <fullName>FoundExpectedDisplay__c</fullName>
    <label>Found/Expected Display</label>
    <description
  >Controls when users see the Found and Expected values for each check in this Check Set. "On demand" lets users expand a check to see its values, and failed checks also show their values inline. "Failed checks only" shows values only on failed checks, keeping passing checks compact. "Every check" shows values inline on every check where values are available. Defaults to "On demand".</description>
    <inlineHelpText
  >When Found/Expected values show. "On demand" (default) = expand to see; failed checks show inline. "Failed checks only" = only on failures. "Every check" = inline everywhere available.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>ON_DEMAND</fullName><default
        >true</default></value><value><fullName>FAILURES_ONLY</fullName><default
        >false</default></value><value><fullName>ALL_ROWS</fullName><default
        >false</default></value></valueSetDefinition>
    </valueSet>
</CustomField>