force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Active</label>
    <description
  >When unchecked, the entire Check Set is disabled without deleting metadata. No checks load or run.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <inlineHelpText
  >Uncheck to disable this Check Set without deleting it. The component will show a Health Check Unavailable message.</inlineHelpText>
</CustomField>