force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/PanelHeading__c.field-meta.xml
<CustomField>
    <fullName>PanelHeading__c</fullName>
    <label>Panel Title</label>
    <description
  >The title shown at the top of the health check panel on the record page.</description>
    <type>Text</type>
    <length>255</length>
        <inlineHelpText
  >The big title users see at the top of the panel, e.g. "Account Data Quality".</inlineHelpText>
    <required>true</required>
</CustomField>