force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/PanelSubheading__c.field-meta.xml
<CustomField>
    <fullName>PanelSubheading__c</fullName>
    <label>Panel Subtitle</label>
    <description
  >Optional one-line text shown under the Panel Title. Keep it to a sentence or two.</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >Optional. A short line shown under the Panel Title to explain what the panel checks.</inlineHelpText>
</CustomField>