force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/PassedChecksDisplay__c.field-meta.xml
<CustomField>
    <fullName>PassedChecksDisplay__c</fullName>
    <label>Passed Checks</label>
    <description
  >Controls how checks that Pass appear. "Show each check" lists every passed check. "Show count only" removes passed checks from the list; their count still appears in the summary bar at the bottom of the card. Defaults to "Show each check".</description>
    <inlineHelpText
  >How passing checks appear. "Show each check" (default) = list them all. "Show count only" = hide from the list; the count still shows in the summary bar.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>SHOW_EACH_CHECK</fullName><default
        >true</default></value><value><fullName
        >SHOW_COUNT_ONLY</fullName><default
        >false</default></value></valueSetDefinition>
    </valueSet>
</CustomField>