force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/PublishRunEvent__c.field-meta.xml
<CustomField>
    <fullName>PublishRunEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Publishes a Check Set Run event after a deliberately initiated run completes. Page-load runs never publish.</description>
    <inlineHelpText
  >Publish a completion event for deliberate API, Flow, scheduled, batch, or user-requested runs. Page-load runs never publish.</inlineHelpText>
    <label>Publish Run Event</label>
    <type>Checkbox</type>
</CustomField>