force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/RowAppearance__c.field-meta.xml
<CustomField>
    <fullName>RowAppearance__c</fullName>
    <label>Result Display Style</label>
    <description
  >Cosmetic only. Controls how the check rows animate in while running. It does not change when checks run (that is the Start Checks field).</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AllAtOnce</fullName>
                <default>true</default>
                <label>Show all rows at once</label>
            </value>
            <value>
                <fullName>OneAtATime</fullName>
                <label>Reveal rows one at a time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >Show all rows at once = every row is listed immediately and fills in. Reveal one at a time = each row appears as its check finishes.</inlineHelpText>
    <required>true</required>
</CustomField>