force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/RunChecksWhen__c.field-meta.xml
<CustomField>
    <fullName>RunChecksWhen__c</fullName>
    <label>Start Checks</label>
    <description
  >Decides whether checks run on their own when the page opens, or only after the user clicks the Run button. Pick "Wait for the user to click Run" for checks that are slow or that users should run on demand.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
                <label>Run automatically when the page opens</label>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Wait for the user to click Run</label>
            </value>
        </valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >Automatic = checks run as soon as the page opens. Manual = a Run button appears and nothing runs until it is clicked.</inlineHelpText>
    <required>true</required>
</CustomField>