force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/ShowDiagnostics__c.field-meta.xml
<CustomField>
    <fullName>ShowDiagnostics__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Enables authorized troubleshooting details on the card and in the browser console. A user sees those details only when this field is checked and the user has the "Record Health Check View Details" Custom Permission. Other users continue to see the standard card. Enable it only while diagnosing a configuration or evaluation problem.</description>
    <label>Show Diagnostics</label>
    <inlineHelpText
  >Troubleshooting only. Details appear only to users with "Record Health Check View Details". Leave unchecked during normal use.</inlineHelpText>
    <type>Checkbox</type>
</CustomField>