force-app/main/default/objects/Record_Health_Check_Set__mdt/fields/StopOnSystemError__c.field-meta.xml
<CustomField>
    <fullName>StopOnSystemError__c</fullName>
    <label>Stop After System Error</label>
    <description
  >When ON, the run stops as soon as a check hits an unexpected system error. It does NOT stop for normal Fail or Skipped results — those let the remaining checks keep running.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >ON: stop the whole run if a check errors out unexpectedly. This does not stop on a normal Fail or Skip.</inlineHelpText>
</CustomField>