force-app/main/default/objects/Record_Health_Check_Set__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>ObjectApiName__c</columns>
    <columns>CardTitle__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>notContain</operation>
        <value>Example_</value>
    </filters>
    <label>All</label>
</ListView>