force-app/main/default/objects/Record_Health_Check_Set__mdt/listViews/Examples.listView-meta.xml
<ListView>
    <fullName>Examples</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ObjectApiName__c</columns>
    <columns>CardTitle__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>startsWith</operation>
        <value>Example_</value>
    </filters>
    <label>Examples (Example_)</label>
</ListView>